--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.15.5",
     "express-session": "^1.17.0",
     "markdown": "^0.5.0",
     "morgan": "~1.9.0",
