--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node app"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -20,6 +21,7 @@
     "markdown": "^0.5.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
